--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,10 @@
 * {
   font-family: "IBM Plex Sans", sans-serif !important;
 }
+
+
 .hero-bg {
-  background-image: linear-gradient(#000000c0, #000000c0), url("hero-bg.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.753), rgba(0, 0, 0, 0.753)), url("/hero-bg.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
